# automacao-financeiro

./: .gitignore  README.md  pyproject.toml
automacao_financeiro/: main.py
automacao_financeiro/capital_dois/: run_capital_dois.py
automacao_financeiro/capital_dois/steps/: contrato_geral.py  login.py
automacao_financeiro/capital_dois/steps/util/: elements_identifiers_capital_dois.py
automacao_financeiro/clientes_efetivados/: run_clientes_efetivados.py
automacao_financeiro/clientes_efetivados/steps/: login.py  set_filters.py
automacao_financeiro/facta/: run_facta.py
automacao_financeiro/facta/clientes_efetivados/: run_clientes_efetivados.py
automacao_financeiro/facta/login/: login.py
automacao_financeiro/facta/relatorios_movimentos_fatura/: run_relatorios_movimentos_fatura.py
automacao_financeiro/login/: login.py
automacao_financeiro/novo_saque/: run_novo_saque.py
automacao_financeiro/novo_saque/steps/: login.py  set_filter.py  table_download_novo_saque.py
automacao_financeiro/relatorios_movimentos_fatura/: run_relatorios_movimentos_fatura.py  set_filters_relatorios_movimentos_fatura.py
automacao_financeiro/relatorios_movimentos_fatura/util/: elements_identifiers.py
automacao_financeiro/service/: run_service.py
automacao_financeiro/service/capital_dois/: run_capital_dois.py
automacao_financeiro/service/facta/: run_facta.py
automacao_financeiro/service/novo_saque/: run_novo_saque.py
automacao_financeiro/steps/: login.py
automacao_financeiro/steps/util/: elements_identifiers.py
automacao_financeiro/ui/: ui.qml
(+28 files in other folders)
